tests/neg/semantic_void_return_value.baa
// EXPECT: لا تعيد قيمة
عدم د() {
    إرجع ١.
}
